--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,13 +1,53 @@
-name: Build Docker image
-
+name: Docker Build for ExcaliDraw Image
 on:
   push:
     branches:
-      - release
+      - master
+    tags:
+      - "v*.*.*"
 
 jobs:
-  build-docker:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - uses: actions/checkout@v2
-      - run: docker build -t excalidraw .
+
+      - name: Checkout
+        uses: actions/checkout@v4
+ 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Get TAG
+        id: get_tag
+        run: echo TAG=${GITHUB_REF##*/} >> $GITHUB_ENV
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to GHCR
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          build-args: |
+            Version=${{  env.TAG }}
+            GitCommit=${{ github.sha }}
+          tags: |
+              ghcr.io/${{ github.repository_owner }}/excalidraw:latest
+              ghcr.io/${{ github.repository_owner }}/excalidraw:${{ github.sha }}
+              ghcr.io/${{ github.repository_owner}}/excalidraw:${{ env.TAG }}
+          secrets: |
+              GIT_AUTH_TOKEN=${{ secrets.TOKEN }}
+          
